<resources>
    <string name="app_name">meteoapp</string>
    <string name="title_homepage" translatable="false">%s, %s</string>
    <string name="min" translatable="false">min.</string>
    <string name="max" translatable="false">max.</string>
    <string name="oggi" translatable="false">%s</string>
    <string name="tempmin" translatable="false">%s°</string>
    <string name="tempmax" translatable="false">%s°</string>
    <string name="data" translatable="false">%s/%s</string>
    <string name="rain" translatable="false">%s %%</string>
    <string name="kmh" translatable="false">%s km/h</string>
    <string name="precip_">precip.</string>
    <string name="vento">vento</string>
    <string name="prox5day" translatable="false">%s</string>
    <string name="city_search" translatable="false">%s, %s</string>
    <string name="temp_search" translatable="false">%s</string>
    <string name="weathertype_search" translatable="false">%s</string>
    <string name="search_city" translatable="false">%s</string>
    <string name="ricerche_recenti">Ricerche recenti</string>
    <string name="search_string">Cerca città</string>
    <string name="next_days">Prossimi 5 giorni</string>
    <string name="image_of_weather_type" translatable="false">image of weather type</string>
    <!---string title-->
    <string name="city_region" translatable="false">%s , %s</string>
    <string name="today">Oggi,</string>
    <string name="today_details" translatable="false">%s %s %s</string>

    <!---string hourly-->
    <string name="time" translatable="false">%s:00</string>
    <string name="type" translatable="false">type</string>
    <string name="temp" translatable="false">%s °</string>
    <string name="umidity" translatable="false">%s %%</string>


    <!---string card titles-->
    <string name="sp_percepita">Percepita</string>
    <string name="sp_UV">Indice UV</string>
    <string name="sp_umidita">Umidità</string>
    <string name="sp_vento">Vento</string>
    <string name="copertura">Copertura</string>
    <string name="pioggia">Pioggia</string>
    <!--- string card data-->
    <string name="DatoPercepita"> %s °</string>
    <string name="DatoUv">%s</string>
    <string name="DatoUmidita">%s %%</string>
    <string name="DatoVento">SSE %s Km/h</string>
    <string name="DatoCopertura">%s %%</string>
    <string name="DatoPioggia">%s cm</string>

    <string name="cerca_citta">Cerca città</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage_name_menu">Home</string>
    <string name="oggi_name_menu">Oggi</string>
    <string name="domani_name_menu">Domani</string>
    <string name="search_name_menu">Cerca</string>
    <string name="language">it</string>

</resources>