<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_300_dp"
    android:padding="@dimen/padding_25_dp"
    android:orientation="horizontal"

    >
    <androidx.cardview.widget.CardView
        android:id="@+id/card_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="@dimen/elevation_10_dp"
        app:cardCornerRadius="@dimen/corner_radius_8_dp"
        app:cardBackgroundColor="@color/white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_15_dp"

            >

            <TextView
                android:id="@+id/sp_percepita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_18_dp"
                android:layout_marginTop="@dimen/margin_18_dp"
                android:text="@string/sp_percepita"
                style="@style/body_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_indiceUV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_198_dp"
                android:layout_marginTop="@dimen/margin_18_dp"
                android:text="@string/sp_UV"
                style="@style/body_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_percepita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_18_dp"
                android:layout_marginTop="@dimen/margin_37_dp"
                android:text="@string/DatoPercepita"
                style="@style/style_dato"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_uv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_198_dp"
                android:layout_marginTop="@dimen/margin_37_dp"
                android:text="@string/DatoUv"
                style="@style/style_dato"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1_dp"
                android:layout_marginStart="@dimen/margin_20_dp"
                android:layout_marginTop="@dimen/margin_70_dp"
                android:layout_marginEnd="@dimen/margin_18.5_dp"
                android:background="#ABA4FF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_umidita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_18_dp"
                android:layout_marginTop="@dimen/margin_84_dp"
                android:text="@string/sp_umidita"
                style="@style/body_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_vento"
                style="@style/body_text"
                android:layout_width="38dp"
                android:layout_height="27dp"
                android:layout_marginStart="@dimen/margin_198_dp"
                android:layout_marginTop="@dimen/margin_84_dp"
                android:text="@string/sp_vento"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_umidita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_18_dp"
                android:layout_marginTop="@dimen/margin_106_dp"
                android:text="@string/DatoUmidita"
                style="@style/style_dato"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_vento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_198_dp"
                android:layout_marginTop="@dimen/margin_106_dp"
                android:text="@string/DatoVento"
                style="@style/style_dato"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1_dp"
                android:layout_marginStart="@dimen/margin_20_dp"
                android:layout_marginEnd="@dimen/margin_18.5_dp"
                android:layout_marginBottom="@dimen/margin_50_dp"
                android:background="#ABA4FF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sp_copertura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_18_dp"
                android:layout_marginTop="@dimen/margin_153_dp"
                android:text="@string/copertura"
                style="@style/body_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:id="@+id/sp_pioggia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_200_dp"
                android:layout_marginTop="@dimen/margin_153_dp"
                android:text="@string/pioggia"
                style="@style/body_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sp_dato_copertura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_18_dp"
                android:layout_marginTop="@dimen/margin_175_dp"
                android:text="@string/DatoCopertura"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/style_dato" />

            <TextView
                android:id="@+id/sp_dato_pioggia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_200_dp"
                android:layout_marginTop="@dimen/margin_175_dp"
                android:text="@string/DatoPioggia"
                style="@style/style_dato"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>