<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/day_hourly_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >


    <TextView
        android:id="@+id/specificDay_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24_dp"
        android:layout_marginTop="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/sp_hour" />


    <ImageView
        android:id="@+id/specificday_type"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/margin_48dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="17.82dp"
        android:contentDescription="@string/type"
        android:src="@drawable/sun"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/specificDay_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ImageContrastCheck" />


    <TextView
        android:id="@+id/specificday_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_48dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginBottom="@dimen/margin_10_dp"
        android:text="@string/temp"
        style="@style/id_sp_hourly"
        app:layout_constraintStart_toEndOf="@id/specificday_type"
        app:layout_constraintTop_toTopOf="parent"  />



    <TextView
        android:id="@+id/specificday_umidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin_52.69_dp"
        android:gravity="top"
        android:drawablePadding="@dimen/drawablePadding_10_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginBottom="@dimen/margin_10_dp"
        android:text="@string/umidity"
        style="@style/id_sp_hourly"
        app:layout_constraintStart_toEndOf="@id/specificday_temp"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/drop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1_dp"
        android:layout_marginStart="@dimen/margin_20_dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="@dimen/margin_20_dp"
        android:background="#ABA4FF"
        app:layout_constraintTop_toBottomOf="@id/specificday_type" />

</androidx.constraintlayout.widget.ConstraintLayout>